# butter-isa

./: .gitignore  dune-project
docs/: isa_specs.md  repl_specs.md
examples/: fibonacci.btr  multiply.bisa  multiply.btr
lib/: dune  isa.ml  mnemonics.ml  modN.ml  ram.ml  regfile.ml  register.ml  simulate.ml
lib/assembler/: assembler.ml  ast.ml  butter_as.ml  dune  error.messages  lexer.mll  mnemonics.ml  parser.mly
lib/common/: bits.ml  dune  modulo.ml  utils.ml
lib/debugger/: ast.ml  debugger.ml  dune  lexer.mll  parser.mly
lib/isa/: base.ml  dune  isa.ml  mnemonics.ml  pretty.ml  pseudo.ml  register.ml
lib/processor/parts/: adders.ml  alu.ml  basics.ml  dune  stateful.ml  types.ml
lib/processor/tests/: adders.ml  basics.ml  dune
lib/simulator/: common.ml  cpu.ml  dune  mnemonics.ml  printer.ml  regfile.ml  simulate.ml
lib/simulator/repl/: dune  error.messages  exec.ml  lexer.mll  specifications.md
specifications/: main.md
test/: dune  test_butter_isa.ml
tests/: dune  test_multiply.ml  test_random_a.ml
